# internal/entity/auth.go
@@ -1,14 +1,14 @@
 package entity
 
 type User struct {
-	ID          string
-	FirstName   string
-	LastName    string
-	PhoneNumber string
-	NickName    string
-	Password    string
-	Avatar      string
-	AccessToken string
+	ID          string `json:"id"`
+	FirstName   string `json:"first_name"`
+	LastName    string `json:"last_name"`
+	PhoneNumber string `json:"phone_number"`
+	NickName    string `json:"nickname"`
+	Password    string `json:"password"`
+	Avatar      string `json:"avatar"`
+	AccessToken string `json:"access_token"`
 }
 
 type UserForRedis struct {
